--- a/ui/public/fonts/index.css
+++ b/ui/public/fonts/index.css
@@ -19,4 +19,24 @@
   src: local('CircularStd'), url('CircularStd-Bold.otf') format('opentype');
 }
 
+@font-face {
+  font-family: 'Public Sans';
+  font-weight: 400;
+  font-style: normal;
+  src: url('public-sans-v18-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Public Sans';
+  font-weight: 700;
+  font-style: normal;
+  src: url('public-sans-v18-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Barlow';
+  font-weight: 900;
+  font-style: normal;
+  src: url('barlow-v12-latin-regular.woff2') format('woff2');
+}
  
